// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feedback/> should render 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  margin-bottom: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c6 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c6:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c6[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c6[aria-pressed="true"]:not([disabled]):hover,
.c6[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c6[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c6[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c6 + .c5 {
  margin-left: 1rem;
}

.c7 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c7:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c7[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c7[aria-pressed="true"]:not([disabled]):hover,
.c7[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c7[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c7[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c7 + .c5 {
  margin-left: 1rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3
          class="c3"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c4"
        >
          <button
            aria-pressed="false"
            class="c5 c6"
          >
            Non
          </button>
          <button
            aria-pressed="false"
            class="c5 c7"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer no 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
  border-bottom-color: #003a61;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c7:not([disabled]):active {
  color: #fff;
  background: #0078c7;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  outline: none;
}

.c7[aria-pressed="true"] {
  color: #fff;
  background: #0068ae;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  border-top-color: #003a61;
  box-shadow: inset 0 1px 2px 0 #003a61;
}

.c7[aria-pressed="true"]:not([disabled]):hover,
.c7[aria-pressed="true"]:not([disabled]):focus {
  background-color: #005994;
}

.c7[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #003a61;
}

.c7[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c9 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #0053b3;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:focus,
.c9:hover,
.c9:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  margin-bottom: 1.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 1.25rem;
}

.c3 {
  margin-bottom: 1rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3
          class="c3"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <form
          action="https://formspree.io/xbalrgzm"
          class="c4"
        >
          <p>
            <strong>
              Merci pour votre réponse !
            </strong>
          </p>
          <p>
            Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
          </p>
          <input
            name="question"
            type="hidden"
            value="Query"
          />
          <input
            name="url"
            type="hidden"
            value="http://server/fiches/fiche1"
          />
          <input
            name="sourceType"
            type="hidden"
            value="Fiches Service Public"
          />
          <select
            class="c5"
            name="motif"
          >
            <option
              value="Les informations proposées ne sont pas à jour"
            >
              Les informations proposées ne sont pas à jour
            </option>
            <option
              value="Les informations me paraissent erronées"
            >
              Les informations me paraissent erronées
            </option>
            <option
              value="Les informations me paraissent incomplètes"
            >
              Les informations me paraissent incomplètes
            </option>
            <option
              value="Les informations me paraissent hors-sujet"
            >
              Les informations me paraissent hors-sujet
            </option>
            <option
              value="Je n'ai pas trouvé la réponse à ma question"
            >
              Je n'ai pas trouvé la réponse à ma question
            </option>
          </select>
          <textarea
            class="c5"
            name="message"
            placeholder="Les informations ..."
          />
          <div
            class="c6"
          >
            <button
              aria-pressed="false"
              class="c7"
            >
              Envoyer mon commentaire
            </button>
            <div
              class="c8"
            />
          </div>
        </form>
        <p>
          Pour obtenir une réponse à votre question de droit du travail, nous vous invitons à joindre les
           
          <button
            aria-pressed="false"
            class="c9"
          >
            services de renseignement
          </button>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should render form once user answer yes 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
  border-bottom-color: #003a61;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c7:not([disabled]):active {
  color: #fff;
  background: #0078c7;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  outline: none;
}

.c7[aria-pressed="true"] {
  color: #fff;
  background: #0068ae;
  border-width: 2px 1px 1px 1px;
  border-color: #005994;
  border-top-color: #003a61;
  box-shadow: inset 0 1px 2px 0 #003a61;
}

.c7[aria-pressed="true"]:not([disabled]):hover,
.c7[aria-pressed="true"]:not([disabled]):focus {
  background-color: #005994;
}

.c7[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #003a61;
}

.c7[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  margin-bottom: 1.25rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c8 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  margin-top: 1.25rem;
}

.c3 {
  margin-bottom: 1rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3
          class="c3"
        >
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <form
          action="https://formspree.io/xbalrgzm"
          class="c4"
        >
          <p>
            <strong>
              Merci pour votre réponse !
            </strong>
          </p>
          <p>
            Vous souhaitez nous aider à améliorer le Code du travail numérique ? Laissez-nous un commentaire :
          </p>
          <input
            name="question"
            type="hidden"
            value="Query"
          />
          <input
            name="url"
            type="hidden"
            value="http://server/fiches/fiche1"
          />
          <input
            name="sourceType"
            type="hidden"
            value="Fiches Service Public"
          />
          <textarea
            class="c5"
            name="message"
            placeholder="Les informations ..."
          />
          <div
            class="c6"
          >
            <button
              aria-pressed="false"
              class="c7"
            >
              Envoyer mon commentaire
            </button>
            <div
              class="c8"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Feedback/> should send piwik event when click no 1`] = `"[]"`;

exports[`<Feedback/> should send piwik event when click yes 1`] = `"[]"`;
